# projector

./: README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
projector/: __init__.py  projector.py
scripts/: build.js
src/: cli.ts  const.ts  core.ts  index.ts  types.ts  wizard.ts
src/utils/: fileSystem.ts  formatBytes.ts  getFileList.ts  getPreset.ts  scanAndEstimate.ts
